@@ -6,8 +6,8 @@
   notice and this notice are preserved.
 */
 #if defined(__MINGW32__) || defined(__MINGW64__)
-#include <windows.h>
 #include <winsock2.h>
+#include <windows.h>
 #else
 #include <time.h>
 #include <sys/time.h>
